fixed alignment and sizing on the nav

--- a/homepage/bad.css
+++ b/homepage/bad.css
@@ -40,7 +40,7 @@ nav{
     padding-right: 10%;
 }
 .links{
-    padding-top: 60pt;
+    padding-top: 48pt;
     padding-left: 50pt;
 }
 /* Code by Tahmid Ahmed (YouTube)*/
